# fem-reference-results

./: .gitignore  .pre-commit-config.yaml  README.md  environment.yaml  pyproject.toml
examples/: README.md
examples/bending_beam/2D/nonlinear_logneohooke/: README.md  four_c_job.sh  generate_hyperelastic_bending_beam.py  hyperelastic_bending_beam.yaml  output-structure.pvd  slurm-3282-bending-beam-neo-hooke.out
examples/bending_beam/2D/nonlinear_logneohooke/output-vtk-files/: structure-00000-0.vtu  structure-00000.pvtu  structure-00010-0.vtu  structure-00010.pvtu  structure-00020-0.vtu  structure-00020.pvtu  structure-00030-0.vtu  structure-00030.pvtu  structure-00040-0.vtu  structure-00040.pvtu  structure-00050-0.vtu  structure-00050.pvtu  structure-00060-0.vtu  structure-00060.pvtu  structure-00070-0.vtu  structure-00070.pvtu  structure-00080-0.vtu  structure-00080.pvtu  structure-00090-0.vtu  structure-00090.pvtu  (+2 more)
examples/block_torsion_3D/: generate_block_torsion.py
examples/block_torsion_3D/nonlinear/: README.md  block_torsion.yaml  four_c_job.sh  output-structure.pvd  slurm-10727-block-torsion-neo-hooke.out
examples/block_torsion_3D/nonlinear/output-vtk-files/: structure-00000.pvtu  structure-00005.pvtu  structure-00010.pvtu  structure-00015.pvtu  structure-00020.pvtu  structure-00025.pvtu  structure-00030.pvtu  structure-00035.pvtu  structure-00040.pvtu  structure-00045.pvtu  structure-00050.pvtu
examples/spherical_contact/2D/: generate_semicircle.py
examples/spherical_contact/2D/nonlinear/: README.md
src/femref/: cubit_utils.py  utils.py
